mengatur gaya dasar untuk seluruh halaman

--- a/index.html
+++ b/index.html
@@ -6,7 +6,82 @@
     <title>Informasi Cuaca</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <style>
-        
+       body {
+            font-family: "Poppins", sans-serif;
+            background-color: #ffe4ec;
+            color: #4a004e;
+            margin: 40px;
+            display: flex;
+            justify-content: center;
+        }
+
+        .container {
+            border: 3px solid #ff80ab;
+            border-radius: 15px;
+            padding: 25px;
+            width: 420px;
+            background-color: #fff0f5;
+            box-shadow: 0 0 15px rgba(255, 128, 171, 0.4);
+        }
+
+        h2 {
+            text-align: center;
+            color: #d81b60;
+            margin-bottom: 15px;
+        }
+
+        label {
+            font-weight: bold;
+            color: #ad1457;
+        }
+
+        input {
+            padding: 7px;
+            margin-right: 5px;
+            border: 2px solid #f48fb1;
+            border-radius: 5px;
+            background-color: #fffafc;
+        }
+
+        button {
+            padding: 7px 15px;
+            background-color: #ec407a;
+            color: white;
+            border: none;
+            border-radius: 6px;
+            cursor: pointer;
+            transition: 0.3s;
+        }
+
+        button:hover {
+            background-color: #d81b60;
+        }
+
+        hr {
+            border: 1px solid #ff80ab;
+            margin: 15px 0;
+        }
+
+        .section {
+            margin-top: 10px;
+            background-color: #ffe4ec;
+            padding: 10px;
+            border-radius: 10px;
+        }
+
+        p {
+            margin: 5px 0;
+        }
+
+        h3 {
+            color: #c2185b;
+            margin-bottom: 5px;
+        }
+
+        span {
+            font-weight: bold;
+            color: #880e4f;
+        } 
     </style>
 </head>
 <body>
