membuat input lokasi kota

--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
 
 <div class="container">
     <h2> Informasi Cuaca </h2>
+    <label>Lokasi: </label>
+    
+    <input type="text" id="inputLokasi" placeholder="Masukkan nama kota">
+    <button id="btnGet">Get</button>
 
 <script>
 
