membuat bagian untuk menampilkan data cuaca

--- a/index.html
+++ b/index.html
@@ -89,9 +89,18 @@
 <div class="container">
     <h2> Informasi Cuaca </h2>
     <label>Lokasi: </label>
-    
+
     <input type="text" id="inputLokasi" placeholder="Masukkan nama kota">
     <button id="btnGet">Get</button>
+
+    <hr>
+
+    <div class="section">
+        <h3>Cuaca</h3>
+        <p>Suhu Celcius = <span id="suhuC">-</span> °C</p>
+        <p>Suhu Fahrenheit = <span id="suhuF">-</span> °F</p>
+        <p>Kelembapan = <span id="kelembapan">-</span> %</p>
+    </div>
 
 <script>
 
