membuat bagian untuk menampilkan data lokasi

--- a/index.html
+++ b/index.html
@@ -101,6 +101,15 @@
         <p>Suhu Fahrenheit = <span id="suhuF">-</span> °F</p>
         <p>Kelembapan = <span id="kelembapan">-</span> %</p>
     </div>
+    
+    <div class="section">
+        <h3>Lokasi</h3>
+        <p>Negara = <span id="negara">-</span></p>
+        <p>Provinsi = <span id="provinsi">-</span></p>
+        <p>Kecamatan = <span id="kecamatan">-</span></p>
+        <p>Longitude = <span id="longitude">-</span></p>
+        <p>Latitude = <span id="latitude">-</span></p>
+    </div>
 
 <script>
 
